<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.phosphor.idecided.Fragments.LeaderProfileFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/ProgressBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/relativeLayoutTopHalf"
            android:background="@drawable/flagbackground6"
            android:padding="3dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/user_profile_photo"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/app_name"/>
            <LinearLayout
                android:id="@+id/linear_layout_leader_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_profile_photo"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_profile_firstname"
                    android:text="@string/firstname"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_profile_secondname"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/secondname"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_profile_surname"
                    android:text="@string/surname"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_profile_post"
                android:layout_below="@id/linear_layout_leader_name"
                android:layout_centerHorizontal="true"
                android:text="@string/post"
                android:textColor="#fff"
                android:textSize="18sp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayoutTopHalf"
            android:layout_marginTop="5dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_profile_party_title"
                android:layout_margin="5dp"
                android:background="#fff"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/partytitle"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_profile_party"
                android:layout_margin="5dp"
                android:background="#fff"
                android:textSize="16sp"
                android:text="@string/party"
                android:padding="20dp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/areatitle"
                android:id="@+id/user_profile_area_title"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:textSize="16sp"
                android:textColor="#000000"
                android:text="@string/area"
                android:padding="20dp"
                android:id="@+id/user_profile_area"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:padding="20dp"
                android:text="@string/educationtitle"
                android:id="@+id/user_profile_education_title"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:padding="20dp"
                android:textColor="#000000"
                android:text="@string/education"
                android:id="@+id/user_profile_education"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:background="#fff"
                android:textSize="16sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:padding="20dp"
                android:text="@string/awardstitle"
                android:id="@+id/user_profile_awards_title"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:padding="20dp"
                android:textColor="#000000"
                android:text="@string/awards"
                android:id="@+id/user_profile_awards"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center"
                android:background="#fff"
                android:padding="20dp"
                android:textColor="#000000"
                android:text="@string/officetitle"
                android:id="@+id/user_profile_inoffice_title"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:padding="20dp"
                android:textColor="#000000"
                android:text="@string/office"
                android:id="@+id/user_profile_inoffice"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="20dp"
                android:textColor="#000000"
                android:text="@string/manifestotitle"
                android:id="@+id/user_profile_manifesto_title"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:padding="20dp"
                android:textColor="#000000"
                android:text="@string/manifesto"
                android:id="@+id/user_profile_manifesto"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>