<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:padding="5dp"
        android:contentDescription="@string/app_name"
        android:background="@drawable/ic_action_name"
        android:id="@+id/imageViewLeaderimage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewfirstname"
        android:text="@string/firstname"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/imageViewLeaderimage"
        android:layout_toRightOf="@id/imageViewLeaderimage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSecondname"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/secondname"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/textViewfirstname"
        android:layout_toEndOf="@id/textViewfirstname"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSurname"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/surname"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/textViewSecondname"
        android:layout_toRightOf="@id/textViewSecondname"/>

    <TextView
        android:id="@+id/textViewLeaderPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_below="@id/textViewfirstname"
        android:layout_toRightOf="@id/imageViewLeaderimage"
        android:layout_toEndOf="@id/imageViewLeaderimage"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"/>
</RelativeLayout>