<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.phosphor.idecided.leaderProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/ProgressBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/flagbackground6"
            android:id="@+id/header_cover_image"
            android:contentDescription="@string/app_name"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/user_profile_photo"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-150dp"
            android:background="@drawable/profile_circular_border_imageview"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/app_name"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/profile_layout"
            android:layout_below="@+id/header_cover_image"
            android:background="#f000"
            android:paddingBottom="24dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:id="@+id/threedotsic"
                android:onClick="showPopup"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="16dp"
                android:src="@drawable/threedotsic"
                android:contentDescription="@string/app_name"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rellayoutleaderName"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_profile_firstname"
                    android:layout_marginTop="7dp"
                    android:text="@string/firstname"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_profile_secondname"
                    android:layout_toEndOf="@+id/user_profile_firstname"
                    android:layout_toRightOf="@id/user_profile_firstname"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    android:text="@string/secondname"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_profile_surname"
                    android:layout_toRightOf="@id/user_profile_secondname"
                    android:layout_toEndOf="@+id/user_profile_secondname"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    android:text="@string/surname"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_profile_post"
                android:layout_below="@id/rellayoutleaderName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/post"
                android:textColor="#fff"
                android:textSize="18sp"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_profile_party_title"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:focusable="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/partytitle"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_profile_party"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:focusable="true"
                android:textSize="16sp"
                android:text="@string/party"
                android:padding="20dp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:focusable="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/areatitle"
                android:id="@+id/user_profile_area_title"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:focusable="true"
                android:textSize="16sp"
                android:text="@string/area"
                android:padding="20dp"
                android:id="@+id/user_profile_area"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:clickable="true"
                android:gravity="center"
                android:focusable="true"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="20dp"
                android:text="@string/educationtitle"
                android:id="@+id/user_profile_education_title"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:clickable="true"
                android:focusable="true"
                android:padding="20dp"
                android:text="@string/education"
                android:id="@+id/user_profile_education"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:background="#fff"
                android:focusable="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:clickable="true"
                android:padding="20dp"
                android:text="@string/awardstitle"
                android:id="@+id/user_profile_awards_title"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:focusable="true"
                android:clickable="true"
                android:padding="20dp"
                android:text="@string/awards"
                android:id="@+id/user_profile_awards"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center"
                android:background="#fff"
                android:focusable="true"
                android:clickable="true"
                android:padding="20dp"
                android:text="@string/officetitle"
                android:id="@+id/user_profile_inoffice_title"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:focusable="true"
                android:clickable="true"
                android:padding="20dp"
                android:text="@string/office"
                android:id="@+id/user_profile_inoffice"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:padding="20dp"
                android:text="@string/manifestotitle"
                android:id="@+id/user_profile_manifesto_title"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:focusable="true"
                android:padding="20dp"
                android:text="@string/manifesto"
                android:id="@+id/user_profile_manifesto"/>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
