<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lazysunnairobi"
    tools:context="com.example.phosphor.idecided.userRegistration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayoutSignUp"
        android:layout_centerVertical="true">

        <EditText
            android:layout_width="@dimen/userNameEditTextUsernamePass"
            android:layout_height="wrap_content"
            android:id="@+id/editTextUseremail"
            android:inputType="textEmailAddress"
            android:hint="@string/enteremail"
            android:drawableStart="@drawable/ic_action_mail"
            android:drawableLeft="@drawable/ic_action_mail"
            android:background="#11000000"
            android:layout_margin="@dimen/editTextMargin"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="@dimen/userNameEditTextUsernamePass"
            android:layout_height="wrap_content"
            android:id="@+id/editTextUsername"
            android:hint="@string/enterusername"
            android:drawableStart="@drawable/ic_action_name"
            android:drawableLeft="@drawable/ic_action_name"
            android:background="#11000000"
            android:layout_margin="@dimen/editTextMargin"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="@dimen/userNameEditTextUsernamePass"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/editTextUserpass"
            android:hint="@string/enterpass"
            android:drawableStart="@drawable/ic_action_pass"
            android:drawableLeft="@drawable/ic_action_pass"
            android:background="#11000000"
            android:layout_margin="@dimen/editTextMargin"
            android:layout_gravity="center"/>


        <LinearLayout
            android:layout_width="@dimen/userNameEditTextUsernamePass"
            android:layout_height="@dimen/cardViewHeight"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/linearLayoutSignUpWidget"
            android:orientation="vertical"
            android:layout_margin="@dimen/cardViewMargin"
            android:background="@drawable/linearlayoutaccess">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/editTextMargin"
                android:textSize="20sp"
                android:id="@+id/btnRegister"
                android:text="@string/register"
                android:textColor="#424242"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textSignIn"
        android:text="@string/alreadyregistered"
        android:layout_below="@+id/linearLayoutSignUp"
        android:textSize="20sp"
        android:textColor="#F0F4C3"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"/>
</RelativeLayout>
